# Anti-Shannon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GH_LAUNCH_GUIDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ml_training.md
examples/: app.py
scripts/: simulate_shannon.py
src/wukong/: __init__.py  middleware.py  proxy.py
src/wukong/defense/: recon.py  shifting.py  tarpit.py  vacuum.py
src/wukong/detectors/: anomaly.py  fingerprint.py  probe.py
src/wukong/traps/: genai.py  honey.py  honeyforms.py  tokens.py
tests/: test_elite.py  test_fingerprint.py  test_genai.py  test_honeytokens.py  test_middleware.py  test_vacuum.py
