[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anti-shannon"
version = "0.1.0"
description = "Hostile Defensive Framework to neutralize autonomous AI agents like Shannon"
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
authors = [
  { name = "Mikaeel", email = "mikaeel@example.com" },
]
dependencies = [
    "starlette",
    "fastapi",
    "httpx",
    "uvicorn",
    "jinja2",
    "scikit-learn",
    "numpy",
    "joblib",
    "faker"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
